--- a/faq.html
+++ b/faq.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encontre ajuda e suporte para utilizar nossa loja de instrumentos musicais.">
-    <meta name="keywords" content="instrumentos musicais, ajuda, suporte, e-commerce">
+    <meta name="description" content="Perguntas Frequentes sobre nossa loja de instrumentos musicais.">
+    <meta name="keywords" content="instrumentos musicais, FAQ, perguntas frequentes, e-commerce">
     <meta name="author" content="Nome da Loja">
-    <title>Ajuda | Loja de Instrumentos Musicais</title>
-    <link rel="stylesheet" href="/assets/css/ajuda.css">
+    <title>FAQ | Loja de Instrumentos Musicais</title>
+    <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -18,20 +18,20 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="/index.html"><img src="/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="/sub-pages/quem-somos.html">Quem Somos</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
-                    <a href="/sub-pages/produtos.html">Produtos</a>
+                    <a href="/produtos.html">Produtos</a>
                     <div class="dropdown-content">
-                        <a href="/sub-pages/produtos/instrumentos.html">Instrumentos</a>
-                        <a href="/sub-pages/produtos/acessorios.html">Acessórios</a>
-                        <a href="/sub-pages/produtos/marcas.html">Marcas</a>
+                        <a href="/produtos/instrumentos.html">Instrumentos</a>
+                        <a href="/produtos/acessorios.html">Acessórios</a>
+                        <a href="/produtos/marcas.html">Marcas</a>
                     </div>
                 </li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
-                <li><a href="/sub-pages/carrinho.html" id="carrinho-btn">
+                <li><a href="/carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
                     </a></li>
@@ -40,62 +40,44 @@
     </header>
 
     <main>
-        <section class="ajuda">
-            <h1>Ajuda</h1>
-            <p class="parag">Encontre respostas para as perguntas mais frequentes e instruções sobre como usar nossa
-                loja.</p>
+        <section class="faq">
+            <h1>Perguntas Frequentes (FAQ)</h1>
 
-            <div class="ajuda-secao">
-                <h2>Como faço um pedido?</h2>
-                <p>Para fazer um pedido, siga os seguintes passos:</p>
-                <ol>
-                    <li>Navegue pelos nossos produtos e adicione os itens desejados ao carrinho.</li>
-                    <li>Acesse o carrinho de compras clicando no ícone do carrinho no canto superior direito.</li>
-                    <li>Revise os itens no carrinho e clique em "Finalizar Compra".</li>
-                    <li>Preencha as informações de envio e pagamento.</li>
-                    <li>Confirme o pedido e aguarde a confirmação por e-mail.</li>
-                </ol>
+            <div class="pergunta">
+                <h2>Como posso rastrear meu pedido?</h2>
+                <p>Após a confirmação do pagamento, você receberá um e-mail com o código de rastreamento e as instruções
+                    para acompanhar seu pedido.</p>
             </div>
 
-            <div class="ajuda-secao">
-                <h2>Como rastrear meu pedido?</h2>
-                <p>Você pode rastrear seu pedido da seguinte maneira:</p>
-                <ol>
-                    <li>Acesse a página de "Rastreamento" no nosso site.</li>
-                    <li>Digite o código de rastreamento que você recebeu por e-mail.</li>
-                    <li>Clique em "Rastrear" para ver o status do seu pedido.</li>
-                </ol>
+            <div class="pergunta">
+                <h2>Qual é o prazo de entrega?</h2>
+                <p>O prazo de entrega varia de acordo com a sua localização e o método de envio selecionado. Geralmente,
+                    os pedidos são entregues entre 5 a 10 dias úteis.</p>
             </div>
 
-            <div class="ajuda-secao">
-                <h2>Como devolver um produto?</h2>
-                <p>Para devolver um produto, siga os seguintes passos:</p>
-                <ol>
-                    <li>Entre em contato com nosso suporte ao cliente através do e-mail
-                        contato@lojadeinstrumentos.com.br.</li>
-                    <li>Informe o motivo da devolução e o número do pedido.</li>
-                    <li>Embale o produto na embalagem original e envie para o endereço fornecido pelo suporte.</li>
-                    <li>Aguarde a confirmação da devolução e o reembolso do valor pago.</li>
-                </ol>
+            <div class="pergunta">
+                <h2>Posso devolver um produto?</h2>
+                <p>Sim, você pode devolver um produto em até 30 dias após o recebimento. O produto deve estar em
+                    perfeitas condições e na embalagem original. Para iniciar uma devolução, entre em contato com nosso
+                    suporte ao cliente.</p>
             </div>
 
-            <div class="ajuda-secao">
+            <div class="pergunta">
                 <h2>Quais métodos de pagamento são aceitos?</h2>
-                <p>Aceitamos os seguintes métodos de pagamento:</p>
-                <ul>
-                    <li>Cartão de Crédito</li>
-                    <li>Boleto Bancário</li>
-                    <li>Transferência Bancária</li>
-                </ul>
+                <p>Aceitamos os seguintes métodos de pagamento: cartão de crédito, boleto bancário e transferência
+                    bancária.</p>
             </div>
 
-            <div class="ajuda-secao">
+            <div class="pergunta">
                 <h2>Como posso entrar em contato com o suporte ao cliente?</h2>
-                <p>Você pode entrar em contato com nosso suporte ao cliente das seguintes formas:</p>
-                <ul>
-                    <li>E-mail: contato@lojadeinstrumentos.com.br</li>
-                    <li>Telefone: (71) 1234-5678</li>
-                </ul>
+                <p>Você pode entrar em contato com nosso suporte ao cliente através do e-mail:
+                    contato@lojadeinstrumentos.com.br ou pelo telefone: (71) 1234-5678.</p>
+            </div>
+
+            <div class="pergunta">
+                <h2>Os produtos têm garantia?</h2>
+                <p>Sim, todos os nossos produtos têm garantia. O período de garantia varia de acordo com o fabricante.
+                    Consulte a página do produto para obter informações detalhadas sobre a garantia.</p>
             </div>
         </section>
     </main>
@@ -112,9 +94,9 @@
                     </div>
                 </div>
                 <div class="footer-links">
-                    <a href="/sub-pages/fale-conosco.html">Fale Conosco</a>
-                    <a href="/sub-pages/faq.html">FAQ</a>
-                    <a href="/sub-pages/ajuda.html">Ajuda</a>
+                    <a href="/fale-conosco.html">Fale Conosco</a>
+                    <a href="/faq.html">FAQ</a>
+                    <a href="/ajuda.html">Ajuda</a>
                 </div>
             </div>
 
@@ -122,22 +104,22 @@
             <div class="brands-section">
                 <div class="brands-logos">
                     <a href="https://www.gibson.com" target="_blank">
-                        <img src="/assets/img/gibson1.png" alt="Gibson" class="brand-logo">
+                        <img src="/img/gibson1.png" alt="Gibson" class="brand-logo">
                     </a>
                     <a href="https://www.fender.com" target="_blank">
-                        <img src="/assets/img/fender.png" alt="Fender" class="brand-logo">
+                        <img src="/img/fender.png" alt="Fender" class="brand-logo">
                     </a>
                     <a href="https://www.jacksonguitars.com" target="_blank">
-                        <img src="/assets/img/jacksom.png" alt="Jackson" class="brand-logo">
+                        <img src="/img/jacksom.png" alt="Jackson" class="brand-logo">
                     </a>
                     <a href="https://www.espguitars.com" target="_blank">
-                        <img src="/assets/img/esp1.jpg" alt="ESP" class="brand-logo">
+                        <img src="/img/esp1.jpg" alt="ESP" class="brand-logo">
                     </a>
                     <a href="https://www.ltdguitars.com" target="_blank">
-                        <img src="/assets/img/ltd.png" alt="LTD" class="brand-logo">
+                        <img src="/img/ltd.png" alt="LTD" class="brand-logo">
                     </a>
                     <a href="https://www.washburn.com" target="_blank">
-                        <img src="/assets/img/washburn.png" alt="Washburn" class="brand-logo">
+                        <img src="/img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
                 </div>
                 <p class="copyright">&copy; 2025 Loja Teste de Instrumentos Musicais. Todos os direitos reservados.</p>
@@ -193,9 +175,8 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
