--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="instrumentos musicais, guitarras, baixos, baterias, teclados, acessórios">
     <meta name="author" content="Nome da Loja">
     <title>Loja de Instrumentos Musicais | Instrumentos para Todos os Estilos</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -22,9 +22,9 @@
                     <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/sub-pages/quem-somos.html">Quem Somos</a></li>
+                <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
-                    <a href="/sub-pages/produtos.html">Produtos</a>
+                    <a href="/produtos.html">Produtos</a>
                     <div class="dropdown-content">
                         <a href="/produtos/instrumentos.html">Instrumentos</a>
                         <a href="/produtos/acessorios.html">Acessórios</a>
@@ -32,7 +32,7 @@
                     </div>
                 </li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
-                <li><a href="/sub-pages/carrinho.html" id="carrinho-btn">
+                <li><a href="/carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
                     </a></li>
@@ -58,42 +58,42 @@
                 <div class="carrossel">
                     <div class="produtos-container">
                         <div class="produto" data-categoria="guitarras" data-marca="fender" data-preco="5000">
-                            <img src="/assets/img/guitar-fender.png" alt="Guitarra Fender Stratocaster">
+                            <img src="/img/guitar-fender.png" alt="Guitarra Fender Stratocaster">
                             <h3>Guitarra Fender Stratocaster</h3>
                             <p>Código: 12345</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
                         <div class="produto" data-categoria="Baixos" data-marca="esp" data-preco="3000">
-                            <img src="/assets/img/bfender.png" alt="Contra Baixo Fender ">
+                            <img src="/img/bfender.png" alt="Contra Baixo Fender ">
                             <h3>Contra Baixo Fender Bassman</h3>
                             <p>Código: 12356</p>
                             <p>Preço: R$ 3.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
                         <div class="produto" data-categoria="guitarras" data-marca="gibson" data-preco="5000">
-                            <img src="/assets/img/gibson.png" alt="Guitarra Gibson Les Paul">
+                            <img src="/img/gibson.png" alt="Guitarra Gibson Les Paul">
                             <h3>Guitarra Gibson Les Paul</h3>
                             <p>Código: 12347</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
                         <div class="produto" data-categoria="guitarras" data-marca="ibanez" data-preco="5000">
-                            <img src="/assets/img/ibanez.png" alt="Guitarra Ibanez">
+                            <img src="/img/ibanez.png" alt="Guitarra Ibanez">
                             <h3>Guitarra Ibanez</h3>
                             <p>Código: 12348</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
                         <div class="produto" data-categoria="guitarras" data-marca="jackson" data-preco="5000">
-                            <img src="/assets/img/jackson.png" alt="Guitarra Jackson">
+                            <img src="/img/jackson.png" alt="Guitarra Jackson">
                             <h3>Guitarra Jackson</h3>
                             <p>Código: 12349</p>
                             <p>Preço: R$ 5.000,00</p>
                             <button onclick="adicionarAoCarrinho(event, this)">Adicionar ao Carrinho</button>
                         </div>
                         <div class="produto" data-categoria="guitarras" data-marca="tagima" data-preco="5000">
-                            <img src="/assets/img/tagima.png" alt="Guitarra Tagima Stratocaster">
+                            <img src="/img/tagima.png" alt="Guitarra Tagima Stratocaster">
                             <h3>Guitarra Tagima Stratocaster</h3>
                             <p>Código: 12350</p>
                             <p>Preço: R$ 5.000,00</p>
@@ -125,9 +125,9 @@
                     </div>
                 </div>
                 <div class="footer-links">
-                    <a href="/sub-pages/fale-conosco.html">Fale Conosco</a>
-                    <a href="/sub-pages/faq.html">FAQ</a>
-                    <a href="/sub-pages/ajuda.html">Ajuda</a>
+                    <a href="/fale-conosco.html">Fale Conosco</a>
+                    <a href="/faq.html">FAQ</a>
+                    <a href="/ajuda.html">Ajuda</a>
                 </div>
             </div>
 
@@ -205,8 +205,8 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
