--- a/perfil.html
+++ b/perfil.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="perfil, compras, pagamentos, endereços">
     <meta name="author" content="Nome da Loja">
     <title>Perfil do Usuário | Loja de Instrumentos Musicais</title>
-    <link rel="stylesheet" href="/assets/css/perfil.css">
+    <link rel="stylesheet" href="/css/perfil.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -18,20 +18,20 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="../index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="/index.html"><img src="/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="/sub-pages/quem-somos.html">Quem Somos</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
-                    <a href="/sub-pages/produtos.html">Produtos</a>
+                    <a href="/produtos.html">Produtos</a>
                     <div class="dropdown-content">
                         <a href="/produtos/instrumentos.html">Instrumentos</a>
                         <a href="/produtos/acessorios.html">Acessórios</a>
                         <a href="/produtos/marcas.html">Marcas</a>
                     </div>
                 </li>
-                <li><a href="../index.html" id="login-btn">Sair</a></li>
-                <li><a href="/sub-pages/carrinho.html" id="carrinho-btn">
+                <li><a href="/index.html" id="login-btn">Sair</a></li>
+                <li><a href="/carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
                     </a></li>
@@ -46,7 +46,7 @@
                 <!-- Informações do Perfil -->
                 <div class="perfil-info">
                     <div class="foto-perfil">
-                        <img src="/assets/img/user.jpg" alt="Foto do Perfil" id="foto-perfil">
+                        <img src="/img/user.jpg" alt="Foto do Perfil" id="foto-perfil">
                         <br>
                         <button onclick="editarFoto()">Alterar Foto</button>
                     </div>
@@ -111,31 +111,31 @@
                     </div>
                 </div>
                 <div class="footer-links">
-                    <a href="/sub-pages/fale-conosco.html">Fale Conosco</a>
-                    <a href="/sub-pages/faq.html">FAQ</a>
-                    <a href="/sub-pages/ajuda.html">Ajuda</a>
+                    <a href="/fale-conosco.html">Fale Conosco</a>
+                    <a href="/faq.html">FAQ</a>
+                    <a href="/ajuda.html">Ajuda</a>
                 </div>
             </div>
 
             <div class="brands-section">
                 <div class="brands-logos">
                     <a href="https://www.gibson.com" target="_blank">
-                        <img src="/assets/img/gibson1.png" alt="Gibson" class="brand-logo">
+                        <img src="/img/gibson1.png" alt="Gibson" class="brand-logo">
                     </a>
                     <a href="https://www.fender.com" target="_blank">
-                        <img src="/assets/img/fender.png" alt="Fender" class="brand-logo">
+                        <img src="/img/fender.png" alt="Fender" class="brand-logo">
                     </a>
                     <a href="https://www.jacksonguitars.com" target="_blank">
-                        <img src="/assets/img/jacksom.png" alt="Jackson" class="brand-logo">
+                        <img src="/img/jacksom.png" alt="Jackson" class="brand-logo">
                     </a>
                     <a href="https://www.espguitars.com" target="_blank">
-                        <img src="/assets/img/esp1.jpg" alt="ESP" class="brand-logo">
+                        <img src="/img/esp1.jpg" alt="ESP" class="brand-logo">
                     </a>
                     <a href="https://www.ltdguitars.com" target="_blank">
-                        <img src="/assets/img/ltd.png" alt="LTD" class="brand-logo">
+                        <img src="/img/ltd.png" alt="LTD" class="brand-logo">
                     </a>
                     <a href="https://www.washburn.com" target="_blank">
-                        <img src="/assets/img/washburn.png" alt="Washburn" class="brand-logo">
+                        <img src="/img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
                 </div>
                 <p class="copyright">&copy; 2025 Loja Teste de Instrumentos Musicais. Todos os direitos reservados.</p>
@@ -228,8 +228,8 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
-    <script src="/assets/js/perfil.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="/js/perfil.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 
 </html>
