--- a/quem-somos.html
+++ b/quem-somos.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="instrumentos musicais, loja, quem somos">
     <meta name="author" content="Nome da Loja">
     <title>Quem Somos | Loja de Instrumentos Musicais</title>
-    <link rel="stylesheet" href="/assets/css/quem-somos.css">
+    <link rel="stylesheet" href="/css/quem-somos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -18,9 +18,9 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="../index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="/index.html"><img src="/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
                     <a href="/produtos.html">Produtos</a>
@@ -91,22 +91,22 @@
             <div class="brands-section">
                 <div class="brands-logos">
                     <a href="https://www.gibson.com" target="_blank">
-                        <img src="/assets/img/gibson1.png" alt="Gibson" class="brand-logo">
+                        <img src="/img/gibson1.png" alt="Gibson" class="brand-logo">
                     </a>
                     <a href="https://www.fender.com" target="_blank">
-                        <img src="/assets/img/fender.png" alt="Fender" class="brand-logo">
+                        <img src="/img/fender.png" alt="Fender" class="brand-logo">
                     </a>
                     <a href="https://www.jacksonguitars.com" target="_blank">
-                        <img src="/assets/img/jacksom.png" alt="Jackson" class="brand-logo">
+                        <img src="/img/jacksom.png" alt="Jackson" class="brand-logo">
                     </a>
                     <a href="https://www.espguitars.com" target="_blank">
-                        <img src="/assets/img/esp1.jpg" alt="ESP" class="brand-logo">
+                        <img src="/img/esp1.jpg" alt="ESP" class="brand-logo">
                     </a>
                     <a href="https://www.ltdguitars.com" target="_blank">
-                        <img src="/assets/img/ltd.png" alt="LTD" class="brand-logo">
+                        <img src="/img/ltd.png" alt="LTD" class="brand-logo">
                     </a>
                     <a href="https://www.washburn.com" target="_blank">
-                        <img src="/assets/img/washburn.png" alt="Washburn" class="brand-logo">
+                        <img src="/img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
                 </div>
                 <p class="copyright">&copy; 2025 Loja Teste de Instrumentos Musicais. Todos os direitos reservados.</p>
@@ -164,8 +164,8 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/login.js"></script>
 
 </body>
 
